-*- text -*-

Changes in 2.10:

New --fatal-warnings option.

picoJava architecture support added.

Motorola MCore 210 processor support added.

A new pseudo-op .intel_syntax has been implemented to allow gas to parse i386
assembly programs with intel syntax.

New pseudo-ops .func,.endfunc to aid in debugging user-written assembler code.

Added -gdwarf2 option to generate DWARF 2 debugging information.

Full 16-bit mode support for i386.

Greatly improved instruction operand checking for i386.  This change will
produce errors or warnings on incorrect assembly code that previous versions of
gas accepted.  If you get unexpected messages from code that worked with older
versions of gas, please double check the code before reporting a bug.

Weak symbol support added for COFF targets.

Mitsubishi D30V support added.

Texas Instruments c80 (tms320c80) support added.

i960 ELF support added.

Changes in 2.9:

Texas Instruments c30 (tms320c30) support added.

The assembler now optimizes the exception frame information generated by egcs
and gcc 2.8.  The new --traditional-format option disables this optimization.

Added --gstabs option to generate stabs debugging information.

The -a option takes a new suboption, m (e.g., -alm) to expand macros in a
listing.

Added -MD option to print dependencies.

Changes in 2.8:

BeOS support added.

MIPS16 support added.

Motorola ColdFire 5200 support added (configure for m68k and use -m5200).

Alpha/VMS support added.

m68k options --base-size-default-16, --base-size-default-32,
--disp-size-default-16, and --disp-size-default-32 added.

The alignment directives now take an optional third argument, which is the
maximum number of bytes to skip.  If doing the alignment would require skipping
more than the given number of bytes, the alignment is not done at all.

The ELF assembler has a new pseudo-op, .symver, used for symbol versioning.

The -a option takes a new suboption, c (e.g., -alc), to skip false conditionals
in listings.
